fix button on iphone

--- a/packages/design/src/components/button.css
+++ b/packages/design/src/components/button.css
@@ -7,8 +7,11 @@
 
   .button.button--square,
   .button.button--circle {
-    aspect-ratio: 1/1;
+    display: inline-flex;     
+    aspect-ratio: 1 / 1;          
     padding: 0 !important;
+    justify-content: center;      
+    align-items: center;          
   }
 
   .button.button--circle {
